# Data-Structure-and-Algorithm

./: CMakeLists.txt  README.md
Arrays/: 3sumproblemLC15.cpp  ContainerWithMostWaterLC11.cpp  Doubling Each Element Of Array.cpp  Doubling Each Elemnt of an Array using functions.cpp  Finding Target Element.cpp  IndexOfSmallestElement.cpp  IndexingOfanArray.cpp  InputandOutput in Array.cpp  Insertion In Array.cpp  Intersection of two Arrays.cpp  IterationInArray.cpp  LargestElementInArray.cpp  Lc-167. Two Sum II - Input Array Is Sorted.cpp  LinearSearch1.cpp  LinearSearch2.cpp  Print all the Duplicate values in an array.cpp  Print all the unique values in array.cpp  Product of Elements of Array.cpp  Removing Element From Array.cpp  Reversing Array using 2 pointer approach.cpp  SizeOfArray.cpp  SmallestNumInArray.cpp  SubarrayofArray.cpp  Sum and product of array.cpp  SumOfEachSubarray.cpp  SumOfElements.cpp  Swap Larges and Smallest number of an Array.cpp  TrappingRainWaterProblemLC42.cpp  Two sum problem Using two pointer method.cpp  TwoSumProblem.cpp  TwoSumProblemUsingMap.cpp  Updating an Elt of Array.cpp
Basics/: HelloWorld.cpp  MultiplicationOfTwoNumbers.cpp  SumOfTwoNumbers.cpp
BinarySearch/: BinarySearch.cpp
Functions/: BinaryToDecimal.cpp  BinomialCoefficientforNandR.cpp  CalculatorUsingSwitchFunc.cpp  DayofWeekUsingSwitchFunc..cpp  DecimalToBinary using XOR.cpp  DecimalToBinary.cpp  Factorial.cpp  Fibonacci Series.cpp  FizzBuzz problem.cpp  HelloFunctions.cpp  Nthfibonacci.cpp  PrimeNumbers.cpp  PrimeNumbersFrom2toN.cpp  ReverseInteger.cpp  Roman to Integer using switch.cpp  SieveOfEratosthenes.cpp  SumOfDigits.cpp  SumOfNumbersFrom1toN.cpp  SumOfTwoNumbers.cpp  checking if a num is power of 2.cpp
Graphs/: AdjacencyList.cpp  AdjacencyMatrix.cpp  BFSTraversal.cpp  BFSTraversalTakingInputFromTheGraph.cpp  BuildingGraph.cpp  CycleDetectionInUndirectedGraphUsingDFS.cpp  DFSTraversal.cpp  DFSTraversalUsinClass.cpp  NumberOfProvinces.cpp  countConnectedComponentsBFS.cpp  countConnectedComponentsDFS.cpp
Loops/: Accessing the element of array  using for each loop.cpp  Doubling each element of the array using for-each loop.cpp  FactorialOfaNumber.cpp  GradingStudentsMarks.cpp  HelloWorldUsingDoWhileLoop.cpp  LowercaseOrUppercaseLetterCheck.cpp  OddEvenCheck.cpp  PrimeNumber.cpp  PrintNumbersFrom1toN.cpp  SumOfEvenNumbers.cpp  SumOfNumbersFrom1toN.cpp  SumOfOddNumbers.cpp  SumOfOddNumbersUsingWhileloop.cpp  VotingEligibility.cpp
Patterns/: 5StarsIn5Lines.cpp  AlphabetsFloydsTriangle.cpp  ContinousAlphabetSquarePattern.cpp  ContinousNumberSquarePattern.cpp  FloydsTriangle.cpp  HollowCylinderPatterns.cpp  InvertedTrianglePattern.cpp  MStarsinNLines.cpp  Number Half Pyramid Pattern (Increasing Numbers).cpp  Palindrome Pyramid Pattern.cpp  PrintABCDin4Lines.cpp  RepeatedAlphabetRightTriangle.cpp  RepeatedNumberRightTriangle.cpp  Reverse Half Pyramid with Numbers.cpp  Reverse Number Triangle Pattern..cpp  RightTriangleStarPattern..cpp  mStarsInaline.cpp  print1234in4lines.cpp
Vector/: Accessing element of vector using at function.cpp  Accessing_element_of_a_vector.cpp  Finding size of a vector using size function .cpp  Linear Search using vector.cpp  Majority Element Brute force method.cpp  Majority element Optimized Method.cpp  MajorityElementUsingMooresVotingAlgo.cpp  Print Maximum Subarray Sum.cpp  Print subarray of the array.cpp  Reversing an Array using Vector.cpp  Single Number Best Approach.cpp  Single Number Leetcdoe 136 BruteForce Approach.cpp  Using capacity function.cpp  Using pop_back function .cpp  Using push_back function.cpp  Vector traversal.cpp
